# Subgoal-label-for-Robolatent

./: .gitignore  README.md  pyproject.toml
app/: __init__.py  annotations.py  config.py  episodes.py  extraction.py  main.py
app/static/: api.js  app.css  app.js  frame-loader.js  index.html  player-controller.js  ui-state.js
docs/superpowers/plans/: 2026-04-23-episode-frame-annotation.md
frontend-tests/: frame-loader.test.mjs  player-controller.test.mjs  ui-state.test.mjs
tests/: test_annotations.py  test_api.py  test_config.py  test_episodes.py  test_extraction.py
