[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "subgoal-label-for-robolatent"
version = "0.1.0"
description = "Local episode frame annotation tool"
requires-python = ">=3.11"
dependencies = [
  "Flask>=3.0,<4.0",
  "h5py>=3.11,<4.0",
  "Pillow>=10.3,<11.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2,<9.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
